# ffmpeg-GUI

./: .gitignore  README.md  main.py  pyproject.toml
ffmpeg/: README.md
src/: constants.py  main_window.py  utils.py  widget_utils.py
