[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ffmpeg-GUI"
version = "0.1.0"
dependencies = ["PySide6"]
description = "GUI window for ffmpeg tool"
readme = "README.md"
authors = [
    { name = "Jiale Song", email = "sjlshawn@gmail.com"}
]
license = { text = "LGPL-3.0-or-later"}